--- a/.env.sample
+++ b/.env.sample
@@ -23,12 +23,17 @@ REDIS_HOST=redis
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
+MAIL_DRIVER=mailgun
+MAIL_HOST=smtp.mailgun.org
+MAIL_PORT=587
+MAIL_USERNAME=postmaster@mg.your_domain
+MAIL_PASSWORD=your_mg_password
 MAIL_ENCRYPTION=null
+MAIL_FROM_ADDRESS=postmaster@mg.your_domain
+MAIL_FROM_NAME=postmaster
+
+MAILGUN_DOMAIN=mg.your_domain
+MAILGUN_SECRET=your_api_key
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
