--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.4.33",
         "doctrine/dbal": "^3.3",
         "fideloper/proxy": "^4.0",
+        "guzzlehttp/guzzle": "^7.9",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0"
     },
